# course-cpp

./: .travis.yml  Makefile  README.md  pelicanconf.py  publishconf.py
content/: Lektsia_1.cpp  Lektsia_2.cpp  Lektsia_3.cpp  Lektsia_4.cpp  Lektsia_5.cpp  Lektsia_6.cpp  Lektsia_7.cpp  Lektsia_8.cpp  Lektsia_9.cpp  aboutLife.txt  exam.rst  lab1.rst  lab10.rst  lab11.rst  lab12.rst  lab13.rst  lab14.rst  lab16.rst  lab17.rst  lab18.rst  lab19.rst  lab2.rst  lab20.rst  lab21.rst  lab22.rst  lab23.rst  lab24.rst  lab3.rst  lab4.rst  lab5.rst  lab6.rst  lab7.rst  lab8.rst  lab9.rst
content-2016-2017/: exam.rst  lab10.rst  lab15.rst  lab18.rst  lab19.rst  lab20.rst  lab21.rst  lab22.rst  lab23.rst  lab3.rst  lab4.rst  lab5.rst  lab6.rst  lab7.rst  test_on_pointers.rst
content-2016-2017/extra/: life_2d_dec_noexchange.c
content-2016-2017/images/lab23/: glider.ogv
content-2016-2017/solutions/lab8/: gtest_sample.cpp  vector3d.cpp  vector3d.hpp  vector_tests.cpp
content-2017-2018/: lab1.rst  lab14.rst  lab3.rst  lab4.rst  lab6.rst  lab7.rst  lab9.rst
content-2017-2018/extra/lab8/: list_app.cpp
content/extra/: life_1d_dec.c  life_2d_dec_noexchange.c  mpi_merge_sort_task.c
content/extra/lab8/: linked_list.hpp
content/solutions/lab8/: CMakeLists.txt
themes/the-theme/templates/: base.html
